--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -1,12 +1,16 @@
 ---
+import { getMyProfile } from '@backend/crud';
 import { createSupabaseServerClient } from '@backend/supabaseServerClient';
 import { getLangFromUrl } from '@i18n';
 
-const supabase = await createSupabaseServerClient(Astro.request, Astro.cookies);
+const supabase = await createSupabaseServerClient(Astro.cookies);
 
 const lang = getLangFromUrl(Astro.url);
 
-return supabase
-  ? Astro.redirect(`/${lang}/projects`)
-  : Astro.redirect(`${lang}/sign-in`);
+const me = await getMyProfile(supabase);
+if (me.error || !me.data) {
+  return Astro.redirect(`/${lang}/sign-in?redirect-to=${Astro.url.pathname}`);
+} else {
+  return Astro.redirect(`/${lang}/projects`);
+}
 ---
