--- a/src/pages/[lang]/forgot-password.astro
+++ b/src/pages/[lang]/forgot-password.astro
@@ -1,12 +1,14 @@
 ---
 import BaseLayout from '@layouts/BaseLayout.astro';
-import { ForgotPassword } from '@apps/auth-forgot-password';
+import { ForgotPassword as ForgotPasswordComponent } from '@apps/auth-forgot-password';
 import { getTranslations } from '@i18n';
 ---
 <BaseLayout title="Recogito | Forgot Password">
   <div class="container">
     <div class="column">
-      <ForgotPassword i18n={getTranslations(Astro.request, 'auth-forgot-password')} client:load />
+      <ForgotPasswordComponent 
+        client:only="react"
+        i18n={getTranslations(Astro.request, 'auth-forgot-password')} />
     </div>
   </div>
 </BaseLayout>
