--- a/src/pages/[lang]/projects/index.astro
+++ b/src/pages/[lang]/projects/index.astro
@@ -28,7 +28,7 @@ if (!projects.data || !invitations.data) {
 
 <BaseLayout title='Dashboard'>
   <ProjectsHome
-    client:only
+    client:only="react"
     me={me.data}
     projects={projects.data}
     invitations={invitations.data}
