--- a/src/pages/[lang]/reset-password.astro
+++ b/src/pages/[lang]/reset-password.astro
@@ -1,12 +1,14 @@
 ---
 import BaseLayout from '@layouts/BaseLayout.astro';
-import { ResetPassword } from '@apps/auth-reset-password';
+import { ResetPassword as ResetPasswordComponent } from '@apps/auth-reset-password';
 import { getTranslations } from '@i18n';
 ---
 <BaseLayout title="Recogito | Reset Password">
   <div class="container">
     <div class="column">
-      <ResetPassword i18n={getTranslations(Astro.request, 'auth-reset-password')} client:load />
+      <ResetPasswordComponent 
+        client:only="react"
+        i18n={getTranslations(Astro.request, 'auth-reset-password')} />
     </div>
   </div>
 </BaseLayout>
