--- a/src/pages/[lang]/users/index.astro
+++ b/src/pages/[lang]/users/index.astro
@@ -50,7 +50,7 @@ if (groupsError) {
     profiles={profiles}
     me={me}
     groups={groups}
-    client:only
+    client:only='react'
   />
 </HeaderLayout>
 <style></style>
