Fix for avatar overflow

--- a/src/components/ProjectCard/ProjectCard.css
+++ b/src/components/ProjectCard/ProjectCard.css
@@ -96,6 +96,8 @@
 .project-card-footer .avatar-stack {
   display: flex;
   flex-direction: row-reverse;
+  align-items: center;
+  font-size: small;
 }
 
 .project-card-footer .avatar-stack .avatar {
