Re-added crypto import

--- a/src/pages/[lang]/users/index.astro
+++ b/src/pages/[lang]/users/index.astro
@@ -1,4 +1,5 @@
 ---
+import crypto from 'crypto';
 import BaseLayout from '@layouts/BaseLayout.astro';
 import { createSupabaseServerClient } from '@backend/supabaseServerClient';
 import { getLangFromUrl, getTranslations } from '@i18n';
