--- a/src/apps/project-request/ProjectRequest.css
+++ b/src/apps/project-request/ProjectRequest.css
@@ -1,14 +1,16 @@
 .project-request-root {
   width: 100%;
-  height: 100%;
+  height: calc(100vh - 60px);
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin-top: 60px;
 }
 
 .project-request-title {
   font-size: x-large;
+  margin-bottom: 20px;
 }
 
 .project-request-description {
