--- a/src/apps/project-request/RequestResultMessage.css
+++ b/src/apps/project-request/RequestResultMessage.css
@@ -54,29 +54,27 @@
   line-height: 1;
   font-weight: 500;
   height: 35px;
+  background-color: var(--primary);
+  color: var(--gray-300);
 }
-.request-result-button-red {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 4px;
-  padding: 0 15px;
-  font-size: 15px;
-  line-height: 1;
-  font-weight: 500;
-  height: 35px;
-  background-color: var(--red-200);
-  color: var(--red-11);
+
+.request-result-button:hover {
+  background-color: var(--light-blue);
 }
-.request-result-button-red:hover {
-  background-color: var(--red-200);
-}
-.request-result-button-red:focus {
-  box-shadow: 0 0 0 2px var(--red-500);
+.request-result-button:focus {
+  box-shadow: 0 0 0 2px var(--brighter-blue);
 }
 
 .warning-icon {
   margin-right: 5px;
+}
+
+.request-result-icon {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
 }
 
 @keyframes overlayShow {
