--- a/src/pages/[lang]/projects/[project]/request.astro
+++ b/src/pages/[lang]/projects/[project]/request.astro
@@ -4,6 +4,7 @@ import { createSupabaseServerClient } from '@backend/supabaseServerClient';
 import { getMyProfile } from '@backend/crud';
 import { getLangFromUrl, getTranslations } from '@i18n';
 import { ProjectRequest } from '@apps/project-request';
+import { getProjectExtended } from '@backend/helpers';
 
 const lang = getLangFromUrl(Astro.url);
 
@@ -13,9 +14,11 @@ const supabase = await createSupabaseServerClient(Astro.cookies);
 
 const projectId = Astro.params.project;
 
+const project = await getProjectExtended(supabase, projectId as string);
+
 const profile = await getMyProfile(supabase);
 if (profile.error || !profile.data) {
-  return Astro.redirect(`/${lang}/sign-in`);
+  return Astro.redirect(`/${lang}/sign-in?redirect-to=${Astro.url}`);
 }
 ---
 
@@ -25,6 +28,7 @@ if (profile.error || !profile.data) {
     i18n={i18n}
     projectId={projectId as string}
     user={profile.data}
+    isAlreadyMember={project.data}
   />
 </BaseLayout>
 
