--- a/src/themes/default/toast/index.css
+++ b/src/themes/default/toast/index.css
@@ -14,8 +14,7 @@
 .toast {
   background-color: #fff;
   border-radius: var(--border-radius);
-  box-shadow:
-    0 10px 38px -10px rgba(14, 18, 22, 0.35),
+  box-shadow: 0 10px 38px -10px rgba(14, 18, 22, 0.35),
     0 10px 20px -15px rgba(14, 18, 22, 0.2);
   column-gap: 25px;
   display: grid;
@@ -24,7 +23,6 @@
   padding: 15px;
   position: relative;
 }
-
 
 .toast[data-state='open'] {
   animation: slideIn 150ms cubic-bezier(0.16, 1, 0.3, 1);
@@ -63,6 +61,9 @@
   grid-area: description;
   line-height: 170%;
   margin: 0;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 
 .toast-action {
@@ -99,5 +100,3 @@
     transform: translateX(calc(100% + var(--viewport-padding)));
   }
 }
-
-
