--- a/src/pages/[lang]/projects/[project]/request.astro
+++ b/src/pages/[lang]/projects/[project]/request.astro
@@ -28,7 +28,7 @@ if (profile.error || !profile.data) {
     i18n={i18n}
     projectId={projectId as string}
     user={profile.data}
-    isAlreadyMember={project.data}
+    isAlreadyMember={Boolean(project.data)}
   />
 </BaseLayout>
 
