--- a/src/apps/dashboard-projects/Header/Header.css
+++ b/src/apps/dashboard-projects/Header/Header.css
@@ -11,7 +11,7 @@
 }
 
 .dashboard-header section.dashboard-header-top {
-  padding: 20px 30px;
+  padding: 30px 30px 25px 30px;
 }
 
 .dashboard-header h1 {
@@ -45,20 +45,17 @@
   font-size: 12px;
   font-weight: 500;
   height: auto;
-  margin-right: 3px;
-  padding: 6px 12px 6px 8px;
+  padding: 8px 12px 8px 8px;
   width: auto;
 }
 
-.dashboard-header
-  section.dashboard-header-bottom
-  .dashboard-header-bottom-actions {
-  align-items: center;
+.dashboard-header section.dashboard-header-bottom .dashboard-header-bottom-actions {
+  align-items: baseline;
   display: flex;
 }
 
 .dashboard-header section.dashboard-header-bottom {
-  padding: 6px 25px 0 30px;
+  padding: 6px 30px 0 30px;
 }
 
 .dashboard-header-bottom ul {
