--- a/src/components/Notifications/Notifications.css
+++ b/src/components/Notifications/Notifications.css
@@ -1,3 +1,13 @@
+button.unstyled.icon-only.notification-actions-trigger {
+  border: none;
+  height: 32px;
+  width: 32px;
+}
+
+.notification-actions-trigger:hover {
+  background-color: rgba(255, 255, 255, 0.25);
+}
+
 .notification-actions-trigger .pip {
   background-color: red;
   border-radius: 50%;
