--- a/src/components/ToggleDisplay/ToggleDisplay.css
+++ b/src/components/ToggleDisplay/ToggleDisplay.css
@@ -1,46 +1,46 @@
 .toggle-display-group {
   display: inline-flex;
-  border-radius: 4px;
-  box-shadow: 0 2px 10px var(--black-a7);
 }
 
-.toggle-display-item {
-  box-sizing: border-box;
-  background-color: white;
-  height: 35px;
-  width: 35px;
-  font-size: 15px;
-  line-height: 1;
+.toggle-display-group button.toggle-display-item {
   align-items: center;
+  background-color: var(--gray-100);
+  border: none;
+  box-sizing: border-box;
+  display: flex;
+  font-size: 15px;
   justify-content: center;
-  margin-left: 1px;
-  padding-left: 2px !important;
-  padding-right: 2px !important;
-  min-width: 0 !important;
-  background-color: var(--gray-100) !important;
+  min-width: auto;
+  width: 35px;
 }
 
-.toggle-display-item[data-state='on'] svg {
+.toggle-display-group :is(button.toggle-display-item) + :is(button) {
+  margin: 0;
+}
+
+.toggle-display-group button.toggle-display-item[data-state='on'] svg {
   color: white !important;
 }
 
-.toggle-display-item:first-child {
-  margin-left: 0;
+.toggle-display-group button.toggle-display-item[data-state='on']:hover {
+  box-shadow: inset 0 0 0 150px rgba(0, 0, 0, 0.06);
+}
+
+.toggle-display-group button.toggle-display-item:first-child {
   border-top-left-radius: 4px;
   border-bottom-left-radius: 4px;
 }
-.toggle-display-item:last-child {
-  margin-left: 0 !important;
+
+.toggle-display-group button.toggle-display-item:last-child {
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
 }
-.toggle-display-item:hover {
+
+.toggle-display-group button.toggle-display-item:hover {
   background-color: var(--gray-300);
 }
-.toggle-display-item[data-state='on'] {
+
+.toggle-display-group button.toggle-display-item[data-state='on'] {
   background-color: var(--primary) !important;
   color: white !important;
-}
-.toggle-display-item:focus {
-  position: relative;
 }
