--- a/src/components/TopBar/TopBar.css
+++ b/src/components/TopBar/TopBar.css
@@ -5,7 +5,7 @@
   display: flex;
   height: 60px;
   justify-content: space-between;
-  padding: 0 40px;
+  padding: 0 30px;
   width: 100%;
   z-index: 9999;
   position: fixed;
@@ -39,3 +39,7 @@
   display: flex;
   flex-direction: row;
 }
+
+.top-bar-actions svg {
+  color: #fff;
+} 
