Minor tweak, in anticipation of future text-annotator changes

--- a/src/apps/annotation-text/TextAnnotationDesktop.css
+++ b/src/apps/annotation-text/TextAnnotationDesktop.css
@@ -32,6 +32,7 @@ html, body {
   z-index: 5;
 }
 
+.r6o-presence-layer, 
 .ta-desktop main .r6o-annotatable .r6o-highlight-layer.presence {
   z-index: 10;
 }
