--- a/src/pages/[lang]/projects/[project]/index.astro
+++ b/src/pages/[lang]/projects/[project]/index.astro
@@ -9,7 +9,7 @@ import BaseLayout from '@layouts/BaseLayout.astro';
 
 const lang = getLangFromUrl(Astro.url);
 
-const supabase = await createSupabaseServerClient(Astro.cookies);
+const supabase = await createSupabaseServerClient(Astro.request, Astro.cookies);
 
 const profile = await getMyProfile(supabase);
 if (profile.error || !profile.data) {
