--- a/src/pages/[lang]/account/me.astro
+++ b/src/pages/[lang]/account/me.astro
@@ -7,7 +7,7 @@ import { AccountPreferences } from '@apps/dashboard-account/AccountPreferences';
 
 const i18n = getTranslations(Astro.request, 'dashboard-account');
 
-const supabase = await createSupabaseServerClient(Astro.cookies);
+const supabase = await createSupabaseServerClient(Astro.request, Astro.cookies);
 
 const { error, data } = await getMyProfile(supabase);
 if (error || !data) {
