--- a/src/components/LoadingOverlay/LoadingOverlay.css
+++ b/src/components/LoadingOverlay/LoadingOverlay.css
@@ -2,11 +2,11 @@
   align-items: center;
   background-color: rgba(255, 255, 255, 0.75);
   display: flex;
-  height: 100%;
+  height: 100vh;
   justify-content: center;
   left: 0;
-  position: absolute;
+  position: fixed;
   top: 0;
-  width: 100%;
+  width: 100vw;
   z-index: 99999;
 }
