--- a/src/apps/project-home/ProjectHome.css
+++ b/src/apps/project-home/ProjectHome.css
@@ -2,7 +2,9 @@
   display: flex;
   flex-direction: column;
   flex-grow: 1;
-  padding: 20px 40px;
+  padding-top: 20px;
+  padding-left: 40px;
+  padding-right: 40px;
   position: relative;
   background-color: white;
 }
