Moa debug logging

--- a/src/pages/500.astro
+++ b/src/pages/500.astro
@@ -2,6 +2,8 @@
 import { getTranslations } from '@i18n';
 import BaseLayout from '@layouts/BaseLayout.astro';
 
+console.log('[astro 500]');
+
 const { t } = getTranslations(Astro.request, 'error');
 ---
 <BaseLayout title="Recogito | Error">
