--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -2,6 +2,8 @@
 import { getTranslations } from '@i18n';
 import BaseLayout from '@layouts/BaseLayout.astro';
 
+console.log('[astro 404]');
+
 const { t } = getTranslations(Astro.request, 'error');
 ---
 <BaseLayout title="Recogito | Not Found">
