--- a/src/pages/[lang]/sign-out.astro
+++ b/src/pages/[lang]/sign-out.astro
@@ -4,6 +4,8 @@ import { Logout } from '@apps/auth-logout';
 import { getTranslations } from '@i18n';
 import { createSupabaseServerClient } from '@backend/supabaseServerClient';
 
+console.log('[lang/sign-in]');
+
 const supabase = await createSupabaseServerClient(Astro.cookies);
 await supabase.auth.signOut();
 ---
