--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,8 +19,8 @@ if (me.error || !me.data) {
   console.log('[index] User not logged in - redirecting to sign-in')
   return Astro.redirect(`/${lang}/sign-in?redirect-to=${Astro.url.pathname}`);
 } else {
-  console.log('[index] user logged in redirecting to:' + `/${lang}/projects`);
-  return Astro.redirect(`/${lang}/projects`);
+  console.log('[index] user logged in redirecting to: ' + `/${lang}/projects/`);
+  return Astro.redirect(`/${lang}/projects/`);
 }
 ---
 
