Dashboard CSS cleanup

--- a/src/apps/dashboard-projects/List/ProjectEntry.css
+++ b/src/apps/dashboard-projects/List/ProjectEntry.css
@@ -4,6 +4,7 @@
   flex-direction: row;
   align-items: center;
   height: 64px;
+  font-size: var(--font-tiny);
   border-bottom: 1px solid var(--gray-200);
 }
 
