--- a/src/components/OwnerPill/OwnerPill.css
+++ b/src/components/OwnerPill/OwnerPill.css
@@ -1,11 +1,17 @@
 .owner-pill {
-  width: 75px;
-  height: 24px;
-  border-radius: 12px;
-  gap: 4px;
+  align-items: center;
   background-color: var(--gray-200);
+  border-radius: 100vw;
   display: flex;
   flex-direction: row;
+  gap: 4px;
   justify-content: center;
-  align-items: center;
+  padding: 0 0.625rem 0 0.375rem;
+  line-height: 200%;
+}
+
+.owner-pill svg {
+  flex: 0 0 auto;
+  height: 14px;
+  width: 14px;
 }
