--- a/src/apps/project-home/AssignmentsView/AssignmentsView.css
+++ b/src/apps/project-home/AssignmentsView/AssignmentsView.css
@@ -1,21 +1,25 @@
 .project-assignments {
-  width: 100%;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
 }
 
 .project-assignments-document-header-bar {
+  align-items: center;
+  box-shadow: 
+    0 0 3px -1px rgba(0, 0, 0, 0.9),
+    0 0 12px -4px rgba(0, 0, 0, 0.18);
   display: flex;
   flex-direction: row;
-  width: 100%;
-  height: 80px;
-  align-items: center;
   justify-content: space-between;
-  box-shadow: 0 4px 4px -2px rgba(0, 0, 0, 0.15);
+  padding: 10px 30px;
 }
 
 .project-assignments-presentation-pane {
   display: flex;
   flex-direction: row;
-  padding-top: 25px;
+  flex-grow: 1;
+  padding: 10px 0 0 30px;
   position: relative;
   align-items: stretch;
 }
