--- a/src/components/BackButtonBar/BackButtonBar.css
+++ b/src/components/BackButtonBar/BackButtonBar.css
@@ -1,17 +1,18 @@
 .back-button-bar-header {
   align-items: center;
   background-color: var(--secondary);
-  border-bottom: 1px solid white;
   box-sizing: border-box;
   display: flex;
   height: 40px;
   font-size: 14px;
   font-weight: 600;
-  padding: 0 40px;
+  margin-top: 60px;
+  padding: 20px 30px;
   width: 100%;
-  z-index: 9999;
-  position: fixed;
-  top: 60px;
+}
+
+.back-button-bar-header svg {
+  margin-right: 0.5rem;
 }
 
 .back-button-bar-back {
