--- a/src/apps/project-settings/ProjectSettings.css
+++ b/src/apps/project-settings/ProjectSettings.css
@@ -1,8 +1,7 @@
 .project-settings {
-  padding: 20px 40px;
+  padding: 20px 30px;
   width: 100%;
   box-sizing: border-box;
-  margin-top: 180px;
 }
 
 .project-settings-inputs {
@@ -26,10 +25,8 @@
 }
 
 .project-settings .tagging-vocabulary {
-  border-top: 1px solid var(--gray-200);
-  border-bottom: 1px solid var(--gray-200);
   max-width: 65ch;
-  padding: 20px;
+  padding: 20px 0;
   z-index: 100;
 }
 
@@ -87,6 +84,7 @@
   transform: translateX(2px);
   will-change: transform;
 }
+
 .project-settings-switch-thumb[data-state='checked'] {
   transform: translateX(19px);
   background-color: var(--bright-blue);
