Project card layout fix

--- a/src/components/ProjectCard/ProjectCard.css
+++ b/src/components/ProjectCard/ProjectCard.css
@@ -25,6 +25,8 @@
 }
 
 .project-card-body {
+  display: flex;
+  flex-direction: column;
   flex-grow: 1;
   padding: 15px 20px 5px 15px;
 }
@@ -65,8 +67,12 @@
 }
 
 .project-card-body ul.document-stats {
+  align-items: flex-end;
   color: var(--font-light);
+  display: flex;
+  flex-grow: 1;
   font-size: 11.5px;
+  justify-content: flex-end;
   list-style-type: none;
   margin: 0;
   padding: 0;
