--- a/src/apps/project-home/ProjectHeader/ProjectHeader.css
+++ b/src/apps/project-home/ProjectHeader/ProjectHeader.css
@@ -108,6 +108,7 @@ section.project-header-header-bottom {
 .project-header-button {
   border: 1px solid black;
   border-radius: 4px;
+  box-shadow: none;
   padding: 8px 16px;
   display: flex;
   flex-direction: row;
