Cleanup + added TopBar to account settings page

--- a/src/pages/[lang]/account/me.astro
+++ b/src/pages/[lang]/account/me.astro
@@ -4,6 +4,7 @@ import { createSupabaseServerClient } from '@backend/supabaseServerClient';
 import { getTranslations } from '@i18n';
 import { getMyProfile } from '@backend/crud/profiles';
 import { AccountPreferences } from '@apps/dashboard-account/AccountPreferences';
+import { listMyInvites } from '@backend/crud';
 
 const i18n = getTranslations(Astro.request, 'dashboard-account');
 
@@ -13,10 +14,24 @@ const { error, data } = await getMyProfile(supabase);
 if (error || !data) {
   return Astro.redirect(`/${lang}/sign-in?redirect-to=${Astro.url.pathname}`);
 }
+
+const invitations = await listMyInvites(supabase);
+if (invitations.error || !invitations.data) {
+  const error = await fetch(`${Astro.url}/404`);
+  return new Response(error.body, {
+    headers: { 'Content-Type': 'text/html;charset=utf-8' },
+    status: 404,
+    statusText: 'Not Found',
+  });
+}
 ---
 
 <BaseLayout title={i18n.t['Account Preferences']}>
-  <AccountPreferences client:load i18n={i18n} profile={data} />
+  <AccountPreferences 
+    client:load 
+    i18n={i18n}
+    invitations={invitations.data}
+    profile={data} />
 </BaseLayout>
 
 <style>
