Implemented Invite by CSV

--- a/src/apps/project-collaboration/InviteListOfUsers/InviteListOfUsers.css
+++ b/src/apps/project-collaboration/InviteListOfUsers/InviteListOfUsers.css
@@ -16,3 +16,8 @@
   outline: none;
   transition: 'border .24s ease-in-out';
 }
+
+.invite-table-container {
+  padding-top: 12px;
+  padding-bottom: 12px;
+}
