--- a/src/pages/[lang]/projects/[project]/index.astro
+++ b/src/pages/[lang]/projects/[project]/index.astro
@@ -22,6 +22,13 @@ if (profile.error || !profile.data) {
 
 const projectId = Astro.params.project;
 
+// Is this someone who is accepting an invite?
+const accept = Astro.url.searchParams.get('accept-invite');
+
+if (accept) {
+  return Astro.redirect(`/${lang}/projects/${projectId}/accept-invite`);
+}
+
 const project = await getProjectExtended(supabase, projectId as string);
 
 if (project.error || !project.data) {
