--- a/src/pages/[lang]/reset-password.astro
+++ b/src/pages/[lang]/reset-password.astro
@@ -3,12 +3,14 @@ import BaseLayout from '@layouts/BaseLayout.astro';
 import { ResetPassword as ResetPasswordComponent } from '@apps/auth-reset-password';
 import { getTranslations } from '@i18n';
 ---
-<BaseLayout title="Recogito | Reset Password">
-  <div class="container">
-    <div class="column">
-      <ResetPasswordComponent 
-        client:only="react"
-        i18n={getTranslations(Astro.request, 'auth-reset-password')} />
+
+<BaseLayout title='Recogito | Reset Password'>
+  <div class='container'>
+    <div class='column'>
+      <ResetPasswordComponent
+        client:only='react'
+        i18n={getTranslations(Astro.request, 'auth-reset-password')}
+      />
     </div>
   </div>
 </BaseLayout>
