--- a/src/pages/[lang]/projects/[project]/request.astro
+++ b/src/pages/[lang]/projects/[project]/request.astro
@@ -10,7 +10,7 @@ const lang = getLangFromUrl(Astro.url);
 
 const i18n = getTranslations(Astro.request, 'project-request');
 
-const supabase = await createSupabaseServerClient(Astro.cookies);
+const supabase = await createSupabaseServerClient(Astro.request, Astro.cookies);
 
 const projectId = Astro.params.project;
 
