--- a/src/pages/[lang]/projects/[project]/collaboration.astro
+++ b/src/pages/[lang]/projects/[project]/collaboration.astro
@@ -15,7 +15,7 @@ const lang = getLangFromUrl(Astro.url);
 
 const i18n = getTranslations(Astro.request, 'project-collaboration');
 
-const supabase = await createSupabaseServerClient(Astro.cookies);
+const supabase = await createSupabaseServerClient(Astro.request, Astro.cookies);
 
 const projectId = Astro.params.project;
 
